# RumorPropagation_CellDEVS

./: .gitignore  CMakeLists.txt  README.md  build_log.txt
RumorPropagation_Assign2/: CMakeLists.txt  README.md
RumorPropagation_Assign2/logs/: output_messages.txt  state.txt
RumorPropagation_Assign2/model/: rumor_config.json  rumor_config_1.json
RumorPropagation_Assign2/report/: ~$port 1.docx
RumorPropagation_Assign2/scripts/: convert_state_to_csv.py  make_rumor_animation.py  run_rumor_default.sh  run_rumor_large_grid.sh
RumorPropagation_Assign2/src/: main.cpp  rumorCell.hpp  rumor_coupled.hpp
RumorPropagation_Assign2/viewer/: index.html  options.json  state_messages.txt  structure.json
RumorPropagation_CellDEVS/RumorPropagation_Assign2/: CMakeLists.txt
model/: rumor_cell_rules.txt  rumor_config.json  rumor_config_1.json  rumor_config_3sources.json  rumor_config_large.json  rumor_model_notes.txt  structure.json
report/: DEVSmodelsForm.doc  Report 1.docx  Rumor_Propagation_CellDEVS_Final_Report.docx  Rumor_Propagation_CellDEVS_Final_Report.docx.docx
scripts/: convert_state_to_csv.py  make_messages_log.py  run_rumor_default.sh  run_rumor_large_grid.sh  run_rumor_single_source.sh  run_rumor_three_sources.sh
src/: main.cpp  rumorCell.hpp  rumorCell.hpp.save  rumor_coupled.hpp
viewer/: data.csv  grid_log.csv  index.html  rumor_config_viewer.json  rumor_grid_log.csv  simulation.json  state_messages.txt  structure.json  transitions.csv  visualization.json
